# EV-Charging-Demand-Forecasting-and-Simulator

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  PROTOBUF_FIX.md  README.md  constraints-3.10.txt  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run_streamlit.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py  app_new.py
dashboard/components/: india_visualizations.py  visualizations.py
dashboard/pages/: feature_analysis.py  overview.py  state_analysis.py
dashboard/views/: feature_analysis.py  overview.py  state_analysis.py
data/: synthetic_generator.py
demo/: run_demo.sh
docs/: project_summary.md
ev_forecast/: __init__.py  data_pipeline.py  features.py  training.py
ev_forecast/api/: __init__.py  app.py
ev_forecast/models/: __init__.py  xgboost_model.py
ev_forecast/utils/: config.py  logging.py  monitoring.py  state_mapping.py  station_coordinates.py
monitoring/: prometheus.yml
nginx/: nginx.conf
notebooks/: 02_baseline_xgboost.ipynb
src/: data_pipeline.py  features.py  training.py
src/api/: app.py
src/utils/: __init__.py  config.py  logging.py  monitoring.py
tests/: __init__.py  conftest.py
tests/unit/: test_api.py  test_data_pipeline.py  test_features.py
